2003-09-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_push_boundary): Fix the
	boundarylenfinal calculation. Thanks to Bart Visscher for catching
	this mistake.

2003-08-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/md5-utils.c (md5_get_digest_from_file): Open in binary
	mode, fixes a bug when built on Win32 systems.

2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped to version 2.1.0

	* configure.in: Bumped to version 2.1.0

	* gmime/gmime-charset.c (g_mime_charset_name): Added back this
	symbol in order to avoid breaking ABI.
	(g_mime_charset_locale_name): Same.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Slight
	fix for growing the buffer used by g_gethostbyname_r().

2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.h.in: Added new headers.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Use the
	re-entrant g_gethostbyname_r() function rather than
	gethostbyname() so that we are threadsafe.

	* gmime/gmime-host-utils.[c,h]: New source files containing
	gethostbyname_r() and gethostbyaddr_r() implementations.

	* gmime/gmime-filter-windows.[c,h]: New source files implementing
	a windows charset detection filter.

	* gmime/gmime-charset.c (g_mime_charset_iso_to_windows): New
	function to return the windows-cp125# equivalent charset for
	iso-8859-# charsets.

	* gmime/gmime-parser.c (parser_push_boundary): Soptimise a bit :-)
	(parser_push_boundary): 

2003-08-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart.c (g_mime_multipart_foreach): Simplified.

	* gmime/gmime-stream-cat.c (stream_read): Same here.
	(stream_write): And finally here.

	* gmime/gmime-stream-file.c (stream_read): Same.
	(stream_write): And again...

	* gmime/gmime-stream-fs.c (stream_read): Here too.
	(stream_write): And here.

	* gmime/gmime-stream-mmap.c (stream_read): Same as the mem stream.
	(stream_write): Same.

	* gmime/gmime-stream-mem.c (stream_read): Need to fix the MIN